Doctor Custom Timetable integrated v2 !

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#0066FF</color>
     <color name="colorPrimaryDark">#003dcb</color>
-    <color name="colorAccent">#6b93ff</color>
+    <color name="colorAccent">#6B93FF</color>
 </resources>
