--- a/app/src/main/res/layout/doctor_managetimetable.xml
+++ b/app/src/main/res/layout/doctor_managetimetable.xml
@@ -10,14 +10,15 @@
         android:layout_height="wrap_content"
         android:text="Add new Consultancy slot"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
+
     <ImageButton
-        android:layout_marginBottom="32dp"
         android:id="@+id/bt_addconsultancyslot"
-        android:layout_gravity="center"
-        android:background="@android:color/holo_red_dark"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@drawable/ic_add_black_24dp"/>
+        android:layout_gravity="center"
+        android:layout_marginBottom="32dp"
+        android:background="@color/colorAccent"
+        android:src="@drawable/ic_add_black_24dp" />
     <TextView
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
