--- a/app/src/main/res/layout/text_appointment.xml
+++ b/app/src/main/res/layout/text_appointment.xml
@@ -31,6 +31,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Available Appointment Slots:"
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:textColor="@android:color/black" />
+
+    <Spinner
+        android:id="@+id/spin_appointment_slot"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp" />
+
     <Button
         android:id="@+id/bt_appointmentschedule"
         android:layout_width="match_parent"
